--- a/Random Trifecta/App.config
+++ b/Random Trifecta/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Random_Trifecta.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+    <userSettings>
+        <Random_Trifecta.Properties.Settings>
+            <setting name="topmost" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="value" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="reset_num" serializeAs="String">
+                <value>18</value>
+            </setting>
+            <setting name="before_num" serializeAs="String">
+                <value>18</value>
+            </setting>
+        </Random_Trifecta.Properties.Settings>
+    </userSettings>
 </configuration>
