フォームサイズの指定 設定項目の追加 細かい問題の修正
修正点
https://github.com/BurstLime/RandomTrifecta/issues/1

--- a/Random Trifecta/App.config
+++ b/Random Trifecta/App.config
@@ -22,6 +22,9 @@
             <setting name="before_num" serializeAs="String">
                 <value>18</value>
             </setting>
+            <setting name="topmost_memo" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Random_Trifecta.Properties.Settings>
     </userSettings>
 </configuration>
